--- a/templates/base.html
+++ b/templates/base.html
@@ -116,6 +116,10 @@
     </div>
 
   </footer>
+  <div>
+    <button  id="top" class="off"><i class="bi bi-arrow-up"></i></button>
+  </div>
+
   {% bootstrap_javascript %}
   {% block js %}{% endblock js %}
 </body>
