wishlist 타유저 목록 수정

--- a/accounts/templates/accounts/wishlist.html
+++ b/accounts/templates/accounts/wishlist.html
@@ -13,7 +13,7 @@
     {% if user.like_products.all %}
       <!-- 버튼 -->
       <div class="wishlist__btn">
-        <button class="goto__cart--btn">장바구니 담기</button>
+        {% comment %} <button class="goto__cart--btn">장바구니 담기</button> {% endcomment %}
         <button class="delete__btn" type="submit" form="like_form">
           삭제하기
         </button>
@@ -21,8 +21,8 @@
       <!-- 찜 목록 -->
       <form action="" method="POST" name='delete_form' id="like_form">
         <div class="wishlist__content wishlist__div">
-          {% if user.like_products.all %}
-            {% for product in user.like_products.all %}
+          {% if users.like_products.all %}
+            {% for product in users.like_products.all %}
               {% csrf_token %}
               <div class="wishlist__box">
                 <a href="{% url "products:products_detail" product.pk %}">
