--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -311,8 +311,8 @@
             <div class="rev-sec">
               <div class="rev-prof-img">
                 <a href="{% url 'accounts:detail' review.account.pk %}">
-                  {% if review.user.profile_image %}
-                  <img class="profile__img" src="{{review.user.profile_image.url}}" alt="profile-img" />
+                  {% if review.account.profile_image %}
+                  <img class="profile__img" src="{{review.account.profile_image.url}}" alt="profile-img" />
                   {% else %}
                   <img class="profile__img" src="{% static 'img/profile_dummy.jpg' %}" alt="profile-img" />
                   {% endif %}
@@ -718,7 +718,7 @@
         </div>
       </div>
       <!--문의 수정 모달-->
-      <div id="qna_update" class="modalC hidden">
+      <!-- <div id="qna_update" class="modalC hidden">
         <div class="tit-area">
           <h1 class="tit">상품 문의하기</h1>
           <button class="btn-close btn-close-qna-update">
@@ -777,7 +777,7 @@
             <button class="btnC" type="submit">완료</button>
           </form>
         </div>
-      </div>
+      </div> -->
 
 
       <!-- 리뷰삭제 안내 모달 -->
