--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -23,6 +23,7 @@ body {
 	font-weight: 400;
 	color: var(--txt);
 	position: relative;
+	min-height: 100vh;
 }
 
 #header .navi {
@@ -76,6 +77,20 @@ body {
 #header .gnb li a:hover::after {
 	width: 100%;
 }
+#header .gnb li .gnb-basket > i {
+	position: relative;
+}
+#header .gnb li .basket-num {
+	background: var(--high-sub);
+	padding: 0.15rem 0.3rem;
+	display: inline-block;
+	border-radius: 50%;
+	color: var(--bg);
+	font-size: 0.85rem;
+	position: absolute;
+	top: 0;
+	right: 1px;
+}
 #header .logo {
 	margin: 2.5rem 0;
 	text-align: center;
@@ -106,10 +121,14 @@ body {
 }
 
 #footer {
+	position: relative;
+	bottom: 0;
 	background: var(--sub);
-	height: 80px;
+	width: 100%;
+	height: 60px;
 	text-align: center;
 	color: var(--bg);
+	z-index: -1;
 }
 #footer p {
 	font-size: 0.8rem;
@@ -119,6 +138,7 @@ body {
 #top {
 	text-align: center;
 	background: var(--main-sub);
+	box-shadow: 0 0 2rem rgba(0, 0, 0, 0.3);
 	color: var(--bg);
 	width: 50px;
 	height: 50px;
@@ -127,7 +147,7 @@ body {
 	right: 50px;
 	bottom: 50px;
 	cursor: pointer;
-	z-index: 100;
+	z-index: 99;
 	line-height: 50px;
 	font-size: 2rem;
 	opacity: 0;
