--- a/static/styles/review_modal.css
+++ b/static/styles/review_modal.css
@@ -28,6 +28,7 @@
 	top: 5%;
 	left: 50%;
 	transform: translate(-50%, 0%);
+	min-width: 700px;
 	max-width: 80vh;
 	background: var(--bg);
 	padding: 5rem 6rem;
@@ -95,6 +96,7 @@
 	border-top: 2px solid var(--gr);
 	display: flex;
 	padding: 1rem;
+	position: relative;
 }
 #review-area .rev-sec .rev-prof-img {
 	border-radius: 50%;
@@ -109,17 +111,16 @@
 	width: 100%;
 	height: 100%;
 }
-#review-area .rev-sec .rev-main .rev-header {
+/* #review-area .rev-sec .rev-main .rev-header {
 	position: relative;
-}
+} */
 #review-area .rev-sec .rev-main .rev-header p {
 	margin-bottom: 1rem;
 }
 #review-area .rev-sec .rev-main .rev-header .rev-btn {
 	position: absolute;
-	top: 0;
-	right: 0;
-	display: flex;
+	top: 10px;
+	right: 0px;
 	align-items: center;
 	opacity: 0.7;
 }
@@ -281,7 +282,7 @@
 #review_update .item-area,
 #qna_update .item-area {
 	display: flex;
-	align-items: flex-end;
+	align-items: center;
 }
 #review .item-area .img-area,
 #qna .item-area .img-area,
