--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -23,153 +23,171 @@
       </div>
     {% else %}
 
-      <form action="" id="cart_from">
-        <table class="cart__table">
-          <thbody>
-            {% for cart_item in cart_items %}
-              <tr>
-                <td class="cart__checkbox">
-                  <input type="checkbox" id="my_checkbox" name="choice" onclick='getCheckedCnt(event)'></td>
-                <td class="cart__img">
-                  <a href="{% url "products:products_detail" cart_item.product.id %}"><img style="height: 100px;" src="{{ cart_item.product.product_image.all.first.image.url }}" alt=""></a>
-                </td>
-                <td class="cart__name">
-                  <p class="mb-3">
-                    {{ cart_item.product.name }}</p>
-                  <p>{{cart_item.product.pay|discount:cart_item.product.sale|intcomma }}
-                    원
-                  </p>
-                </td>
-                <td class="cart__quantity">
-                  <div class=" buy-mount-btn">
-                    <span class='minus-btn'>-</span>
-                    <span class='buy-mount'>{{ cart_item.quantity }}</span>
-                    <span class='plus-btn'>+</span>
-                  </div>
-                </td>
-                <td class='total-purchase-price-wrap cart__total'>
-                  <span class='total-purchase-price' data-price='{{ cart_item.product.pay }}' data-sale='{{ cart_item.product.sale }}' data-delivery='{{ cart_item.product.delivery }}'>{{cart_item.product.pay|discount:cart_item.product.sale|mul:cart_item.quantity|intcomma }}원</span>
-                </td>
-                <td>
-                  <button class="delete__btn" type="submit" form="cart_form">
-                    <a href="{% url "cart:cart_remove" cart_item.product.id %}">삭제하기</a>
-                  </button>
-                </td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+      <table class="cart__table">
+        <thbody>
+          {% for cart_item in cart_items %}
+            <tr>
+              <td class="cart__checkbox">
+                <input type="checkbox" id="my_checkbox" name="choice" onclick='getCheckedCnt(event)' data-pdt='{{ cart_item.product.pk }}'></td>
+              <td class="cart__img">
+                <a href="{% url "products:products_detail" cart_item.product.id %}"><img style="height: 100px;" src="{{ cart_item.product.product_image.all.first.image.url }}" alt=""></a>
+              </td>
+              <td class="cart__name">
+                <p class="mb-3">
+                  {{ cart_item.product.name }}</p>
+                <p>{{cart_item.product.pay|discount:cart_item.product.sale|intcomma }}
+                  원
+                </p>
+              </td>
+              <td class="cart__quantity">
+                <div class=" buy-mount-btn">
+                  <span class='minus-btn'>-</span>
+                  <span class='buy-mount mount-{{ cart_item.product.pk }}'>{{ cart_item.quantity }}</span>
+                  <span class='plus-btn'>+</span>
+                </div>
+              </td>
+              <td class='total-purchase-price-wrap cart__total'>
+                <span class='total-purchase-price' data-price='{{ cart_item.product.pay }}' data-sale='{{ cart_item.product.sale }}' data-delivery='{{ cart_item.product.delivery }}'>{{cart_item.product.pay|discount:cart_item.product.sale|mul:cart_item.quantity|intcomma }}원</span>
+              </td>
+              <td>
+                <button class="delete__btn" type="submit" form="cart_form">
+                  <a href="{% url "cart:cart_remove" cart_item.product.id %}">삭제하기</a>
+                </button>
+              </td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
 
-        <p class="cart__choice">총
-          <span id="count__result" class="total__count">0</span>
-          개의 상품을 선택하셨습니다.
+      <p class="cart__choice">총
+        <span id="count__result" class="total__count">0</span>
+        개의 상품을 선택하셨습니다.
+      </p>
+      <div class="cart__result">
+        <p class="cart__pay--choice">선택 상품 금액
+          <span id="choice__total">0원</span>
+          + 배송비
+          <span id="tot-delivery">0원</span></p>
+        <p class="cart__pay--total">
+          전체 주문 금액 :
+          <span id="total">0원</span>
         </p>
-        <div class="cart__result">
-          <p class="cart__pay--choice">선택 상품 금액
-            <span id="choice__total">0원</span>
-            + 배송비
-            <span id="tot-delivery">0원</span></p>
-          <p class="cart__pay--total">
-            전체 주문 금액 :
-            <span id="total">0원</span>
-          </p>
-          <button class="cart__btn" type="submit" form="like_form">
-            <a href="{% url "orders:index"%}">주문 하기</a>
-          </button>
-        </div>
+        <form action="{% url 'orders:index' %}" method='POST'>
+          {% csrf_token %}
+          <input type="hidden" id="pdt_to_buy" name="pdt_to_buy" value=''>
+          <input type="hidden" id="mount_per_pdt" name="mount_per_pdt" value=''>
+          <input class="cart__btn" type="submit" value='주문 하기'>
+        </form>
+      </div>
 
-      {% endif %}
-    </section>
-    <script>
-      const choiceTotal = document.querySelector('#choice__total')
-      const total = document.querySelector('#total')
-      const totDelivery = document.querySelector('#tot-delivery')
-      let choiceSum = 0
-      let deliverySum = 0
+    {% endif %}
+  </section>
+  <script>
+    const choiceTotal = document.querySelector('#choice__total')
+    const total = document.querySelector('#total')
+    const totDelivery = document.querySelector('#tot-delivery')
+    let choiceSum = 0
+    let deliverySum = 0
 
-      function getCheckedCnt(event) {
-        const query = 'input[name="choice"]:checked';
-        const selectedElements = document.querySelectorAll(query);
-        const checkbox = event.target
-        const is_checked = checkbox.checked;
-        const selectedElementsCnt = selectedElements.length;
+    function getCheckedCnt(event) {
+      const query = 'input[name="choice"]:checked';
+      const selectedElements = document.querySelectorAll(query);
+      const checkbox = event.target
+      const is_checked = checkbox.checked;
+      const selectedElementsCnt = selectedElements.length;
 
-        // 체크박스 선택 개수
-        document
-          .getElementById('count__result')
-          .textContent = selectedElementsCnt;
+      // 체크박스 선택 개수
+      document
+        .getElementById('count__result')
+        .textContent = selectedElementsCnt;
 
-        //선택 금액
-        const selectPriceElement = event.target.parentElement.nextElementSibling.nextElementSibling.nextElementSibling.nextElementSibling.firstElementChild
-        let selectPrice = selectPriceElement
-          .innerText
-          .slice(0, -1)
-          .replace(",", "")
-        selectPrice = Number(selectPrice)
-        const delivery = Number(selectPriceElement.dataset.delivery)
+      //선택 금액
+      const selectPriceElement = event.target.parentElement.nextElementSibling.nextElementSibling.nextElementSibling.nextElementSibling.firstElementChild
+      let selectPrice = selectPriceElement
+        .innerText
+        .slice(0, -1)
+        .replace(",", "")
+      selectPrice = Number(selectPrice)
+      const delivery = Number(selectPriceElement.dataset.delivery)
 
-        // 선택 상품 가격 더하고 뺴기
-        if (is_checked) {
-          choiceSum += selectPrice
-          deliverySum += delivery
-        } else {
-          choiceSum -= selectPrice
-          deliverySum -= delivery
-        }
-
-        // 선택 합산 금액
-        choiceTotal.innerText = `${ (choiceSum).toLocaleString('ko-KR')}원`
-
-        // 배송비
-        totDelivery.innerText = `${deliverySum.toLocaleString()}원`
-
-        // 전체 합산 금액
-        total.innerText = `${ (choiceSum + deliverySum).toLocaleString('ko-KR')}원`
+      // 선택 상품 가격 더하고 뺴기
+      if (is_checked) {
+        choiceSum += selectPrice
+        deliverySum += delivery
+      } else {
+        choiceSum -= selectPrice
+        deliverySum -= delivery
       }
 
-      // 수량 버튼
-      const minusBtn = document.querySelectorAll('.minus-btn')
-      const plusBtn = document.querySelectorAll('.plus-btn')
-      const buyMount = document.querySelector('.buy-mount')
+      // 선택 합산 금액
+      choiceTotal.innerText = `${ (choiceSum).toLocaleString('ko-KR')}원`
 
-      const calTotPurchasePrice = function (totalPurchasePrice, pdtPrice, sale, mount) {
-        if (mount !== 0) {
-          totalPurchasePrice.innerText = `${ (pdtPrice * (100 - sale) * 0.01 * mount).toLocaleString('ko-KR')}원`
-        } else {
-          totalPurchasePrice.innerText = '0원'
-        }
+      // 배송비
+      totDelivery.innerText = `${deliverySum.toLocaleString()}원`
+
+      // 전체 합산 금액
+      total.innerText = `${ (choiceSum + deliverySum).toLocaleString('ko-KR')}원`
+
+      // 주문하기 버튼 눌렀을 때, 구매해야할 상품 정보랑 각 수량 정보 넘기기
+      const pdtsToBuyInput = document.querySelector('#pdt_to_buy')
+      const mountPerPdtsInput = document.querySelector('#mount_per_pdt')
+
+      let pdtsToBuyInfo = []
+      let mountPerPdtsInfo = []
+      for (let selectedElement of selectedElements) {
+        selectedPdtPk = selectedElement.dataset.pdt;
+        pdtsToBuyInfo.push(selectedElement.dataset.pdt)
+
+        selectedPdtMountTag = document.querySelector(`.mount-${selectedPdtPk}`)
+        mountPerPdtsInfo.push(selectedPdtMountTag.innerText)
       }
+      pdtsToBuyInput.value = pdtsToBuyInfo
+      mountPerPdtsInput.value = mountPerPdtsInfo
+    }
 
-      plusBtn.forEach(plus => {
-        plus.addEventListener("click", event => {
-          let buyMount = plus.previousElementSibling
-          buyMount.innerText = parseInt(buyMount.innerText) + 1
+    // 수량 버튼
+    const minusBtn = document.querySelectorAll('.minus-btn')
+    const plusBtn = document.querySelectorAll('.plus-btn')
+    const buyMount = document.querySelector('.buy-mount')
 
-          const mount = parseInt(buyMount.innerText)
-          const totalPurchasePrice = plus.parentElement.parentElement.nextElementSibling.firstElementChild
-          const pdtPrice = parseInt(totalPurchasePrice.dataset.price)
-          const sale = parseInt(totalPurchasePrice.dataset.sale)
+    const calTotPurchasePrice = function (totalPurchasePrice, pdtPrice, sale, mount) {
+      if (mount !== 0) {
+        totalPurchasePrice.innerText = `${ (pdtPrice * (100 - sale) * 0.01 * mount).toLocaleString('ko-KR')}원`
+      } else {
+        totalPurchasePrice.innerText = '0원'
+      }
+    }
 
-          calTotPurchasePrice(totalPurchasePrice, pdtPrice, sale, mount)
+    plusBtn.forEach(plus => {
+      plus.addEventListener("click", event => {
+        let buyMount = plus.previousElementSibling
+        buyMount.innerText = parseInt(buyMount.innerText) + 1
 
-        });
+        const mount = parseInt(buyMount.innerText)
+        const totalPurchasePrice = plus.parentElement.parentElement.nextElementSibling.firstElementChild
+        const pdtPrice = parseInt(totalPurchasePrice.dataset.price)
+        const sale = parseInt(totalPurchasePrice.dataset.sale)
+
+        calTotPurchasePrice(totalPurchasePrice, pdtPrice, sale, mount)
+
       });
+    });
 
-      minusBtn.forEach(minus => {
-        minus.addEventListener("click", event => {
-          let buyMount = minus.nextElementSibling
-          if (parseInt(buyMount.innerText) - 1 >= 0) {
-            buyMount.innerText = parseInt(buyMount.innerText) - 1
-          }
+    minusBtn.forEach(minus => {
+      minus.addEventListener("click", event => {
+        let buyMount = minus.nextElementSibling
+        if (parseInt(buyMount.innerText) - 1 >= 0) {
+          buyMount.innerText = parseInt(buyMount.innerText) - 1
+        }
 
-          const mount = parseInt(buyMount.innerText)
-          const totalPurchasePrice = minus.parentElement.parentElement.nextElementSibling.firstElementChild
-          const pdtPrice = parseInt(totalPurchasePrice.dataset.price)
-          const sale = parseInt(totalPurchasePrice.dataset.sale)
+        const mount = parseInt(buyMount.innerText)
+        const totalPurchasePrice = minus.parentElement.parentElement.nextElementSibling.firstElementChild
+        const pdtPrice = parseInt(totalPurchasePrice.dataset.price)
+        const sale = parseInt(totalPurchasePrice.dataset.sale)
 
-          calTotPurchasePrice(totalPurchasePrice, pdtPrice, sale, mount)
-        });
+        calTotPurchasePrice(totalPurchasePrice, pdtPrice, sale, mount)
       });
-    </script>
+    });
+  </script>
 
-  {% endblock body %}
+{% endblock body %}
