메인 슬라이드 배너 이미지변경, 일부 css 수정

--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -190,13 +190,11 @@
           <input type="hidden" class="mount_per_pdt" name="mount_per_pdt" value='1'>
           {% comment %} 수량=0일 때, 모달창 뜨게 {% endcomment %}
           <!-- Button trigger modal -->
-          <button type='button' class="buy-btn buy-btn-modal" data-bs-toggle="modal"
-            data-bs-target="#buyModal">
+          <button type='button' class="buy-btn buy-btn-modal" data-bs-toggle="modal" data-bs-target="#buyModal">
             바로구매
           </button>
           <!-- Modal -->
-          <div class="modal fade" id="buyModal" tabindex="-1" aria-labelledby="buyModalLabel"
-            aria-hidden="true">
+          <div class="modal fade" id="buyModal" tabindex="-1" aria-labelledby="buyModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
@@ -410,7 +408,7 @@
             {% endfor %}
             {% else %}
             <div class="rev-sec">
-              <p>아직 작성된 리뷰가 없어요 :(</p>
+              <p class="rev-empt">아직 작성된 리뷰가 없어요 :(</p>
             </div>
             {% endif %}
           </div>
@@ -555,13 +553,11 @@
             <input type="hidden" class="mount_per_pdt" name="mount_per_pdt" value='1'>
             {% comment %} 수량=0일 때, 모달창 뜨게 {% endcomment %}
             <!-- Button trigger modal -->
-            <button type='button' class="buy-btn buy-btn-modal" data-bs-toggle="modal"
-              data-bs-target="#buyModal">
+            <button type='button' class="buy-btn buy-btn-modal" data-bs-toggle="modal" data-bs-target="#buyModal">
               바로구매
             </button>
             <!-- Modal -->
-            <div class="modal fade" id="buyModal" tabindex="-1" aria-labelledby="buyModalLabel"
-              aria-hidden="true">
+            <div class="modal fade" id="buyModal" tabindex="-1" aria-labelledby="buyModalLabel" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
