--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
             {% else %}
             <li>
               <a href="{% url 'cart:cart_detail' %}">장바구니
-                <i class="bi bi-basket3-fill"></i>
+                <i class="bi bi-cart-fill"></i>
               </a>
             </li>
             {% endif %}
