결제완료페이지 수정

--- a/accounts/templates/accounts/order_list.html
+++ b/accounts/templates/accounts/order_list.html
@@ -11,7 +11,7 @@
     <!-- 리뷰 리스트 -->
     <section class="review pb-5">
       {% comment %} 임의로 if문 넣은거라 바꾸시면 됩니다. {% endcomment %}
-      {% if orders %}
+      {% if order_list %}
         <table class="order__table">
           <thead>
             <tr>
@@ -23,22 +23,18 @@
           </thead>
           <!-- 여기에 주문 상품 for문 넣으시면 됩니다. -->
           <tbody>
+            {% for orders in order_list %}
+            {% for order in orders %}
             <tr>
-              <td class="order__td--number">1234567</td>
+              <td class="order__td--number">{{ order.pk }}</td>
               <td class="order__td--img">
-                <img class="profile__review--img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="order-img"/>
+                <img class="profile__review--img" src="{{ order.order_item.product.product_image.all.0.image.url }}" alt="order-img"/>
               </td>
-              <td class="order__name">모모씨 베어 키링 (6종)</td>
-              <td class="order__td--status">상품 준비중</td>
+              <td class="order__name">{{ order.order_item.product.name }}</td>
+              <td class="order__td--status">배송 완료</td>
             </tr>
-            <tr>
-              <td class="order__td--number">1234567</td>
-              <td class="order__td--img">
-                <img class="profile__review--img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="order-img"/>
-              </td>
-              <td class="order__name">모모씨 베어 키링 (6종)</td>
-              <td class="order__td--status">상품 준비중</td>
-            </tr>
+            {% endfor %}
+            {% endfor %}
           </tbody>
           <!-- endfor 넣는 자리 -->
         </table>
