--- a/orders/templates/orders/order_complete.html
+++ b/orders/templates/orders/order_complete.html
@@ -18,17 +18,17 @@
           <th>가격</th>
           <th>배송비</th>
         </tr>
-        {% for product in products %}
+        {% for order in completed_orders %}
           <tr>
-            <td>{{ product.name }}</td>
-            <td class="pdt-buy-mount" data-mount="1">1개</td>
-            <td class='pdt-pay' data-discounted-price='{{ product.pay|discount:product.sale }}'>
-              {{ product.pay|discount:product.sale|intcomma }}원
+            <td>{{ order.order_item.product.name }}</td>
+            <td class="pdt-buy-mount" data-mount="{{ order.order_item.quantity }}">{{ order.order_item.quantity }}개</td>
+            <td class='pdt-pay' data-discounted-price='{{ order.order_item.product.pay|discount:order.order_item.product.sale }}'>
+              {{ order.order_item.product.pay|discount:order.order_item.product.sale|intcomma }}원
             </td>
-            <td class="pdt-delivery" data-delivery='{{ product.delivery }}'>
+            <td class="pdt-delivery" data-delivery='{{ order.order_item.product.delivery }}'>
               <i class="bi bi-truck"></i>
-              {% if product.delivery != '0' %}
-                {{ product.delivery }}원
+              {% if order.order_item.product.delivery != '0' %}
+                {{ order.order_item.product.delivery }}원
               {% else %}
                 무료배송
               {% endif %}
@@ -52,7 +52,7 @@
         </div>
         <div class='how-to-pay'>
           <p>결제일</p>
-          <p>2022.11.18 10:30</p>
+          <p>{{ completed_orders.0.date|date:'Y-n-j H:i:s' }}</p>
         </div>
       </div>
       <div class='barcode'>
