--- a/static/styles/cart.css
+++ b/static/styles/cart.css
@@ -56,6 +56,16 @@
   width: 10%;
 }
 
+.cart__trash:hover {
+  border: none;
+  transform: scale(1.2);
+  transition: all 200ms ease;
+}
+
+.bi-trash {
+  color: var(--highlight);
+}
+
 /* 수량 버튼 */
 .buy-mount-btn {
   display: flex;
@@ -68,7 +78,6 @@
   padding: 0.4rem 1rem;
   background-color: rgb(248, 248, 248);
   border: 1px solid rgb(245, 245, 245);
-  /* text-align: center; */
 }
 
 .minus-btn:hover,
@@ -78,7 +87,7 @@
 }
 
 .cart__choice {
-  margin-top: 4rem;
+  margin-top: 3rem;
   text-align: center;
   margin-bottom: 0.7rem;
   font-weight: 600;
@@ -93,23 +102,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   height: 12rem;
-  border: 2px solid var(--main);
+  border: 2px solid var(--line);
   border-radius: 5px;
   margin: 3rem 0;
 }
 
-.cart__pay--choice {
+.cart__pay--choice,
+.cart__pay--total,
+.cart__pay--delivery {
   margin-bottom: 1rem;
   font-size: 1.1rem;
   font-weight: 600;
-}
-
-.cart__pay--total {
-  font-size: 1.4rem;
-  font-weight: 600;
-  margin-bottom: 2rem;
 }
 
 .cart__btn {
@@ -118,4 +122,14 @@
   border-radius: 5px;
   width: 8rem;
   height: 3rem;
+}
+
+.cart__btn:hover {
+  background-color: var(--main-sub);
+  transition: all 200ms ease;
+}
+
+.cart__symbol {
+  font-size: 1.5rem;
+  font-weight: 600;
 }
